--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-pandas 
-notebook
-numpy
-scikit-learn
-matplotlib
-python-box
-pyyaml
+pandas
+numpy==1.24.4
+matplotlib==3.7.2
+plotly==5.15.0
+seaborn==0.12.2
+imblearn
+scipy
+wordcloud==1.9.2
+nltk==3.8.1
+scikit-learn==1.3.0
+xgboost==1.7.6
+joblib==1.3.2
+py yaml
+python box
 ensure
-joblib
-types-PyYAML
-Flask
-Flask-Cors
--e .
