--- a/params.yaml
+++ b/params.yaml
@@ -2,7 +2,7 @@ train_data_path: "data/train.csv"
 test_data_path: "data/test.csv"
 target_column: "status"
 
-xgboost_params:
+XGBClassifier:
   learning_rate: 0.5
   max_depth: 7
   n_estimators: 500
